--- a/src/main/resources/templates/pages/user.html
+++ b/src/main/resources/templates/pages/user.html
@@ -33,9 +33,9 @@
   </tbody>
 </table>
 
-<a th:href="@{/users/{id}/edit(id=${user.getId()})}">Edit</a>
+<a th:href="@{/users/edit?id={id}(id=${user.getId()})}">Edit</a>
 
-<form th:method="DELETE" th:action="@{/users/{id}(id=${user.getId()})}">
+<form th:method="POST" th:action="@{/users/delete?id={id}(id=${user.getId()})}">
     <br/>
     <input type="submit" value="Delete"/>
 </form>
