--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -9,7 +9,7 @@
 <body>
 
 <div th:each="user: ${users}">
-    <a th:href="@{/users/{id}(id=${user.getId()})}"
+    <a th:href="@{/users?id={id}(id=${user.getId()})}"
        th:text="${user.getName() + ' ' + user.getLastName()}">user</a>
 </div>
 
